# discussion-testing-pbf2json

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.sh  test.sh
data/: data.osm.pbf
src/: CMakeLists.txt  extremities.h  json_dump.cpp  json_dump.h  main.cpp  osm_parser.cpp  osm_parser.h
